extendr-macros/tests/cases/case-extendr-macro.stderr
error: Unexpected key
 --> tests/cases/case-extendr-macro.rs:4:11
  |
4 | #[extendr(foo = true)]
  |           ^^^

error: unexpected end of input, `r_name` must be a string literal
 --> tests/cases/case-extendr-macro.rs:7:1
  |
7 | #[extendr(r_name = 1)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `mod_name` must be a string literal
  --> tests/cases/case-extendr-macro.rs:10:1
   |
10 | #[extendr(mod_name = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `use_rng` must be `true` or `false`
  --> tests/cases/case-extendr-macro.rs:13:1
   |
13 | #[extendr(use_rng = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected &self or &mut self
  --> tests/cases/case-extendr-macro.rs:22:20
   |
22 |     fn nonref_self(self) {}
   |                    ^^^^

error: found &self in non-impl function - have you missed the #[extendr] before the impl?
  --> tests/cases/case-extendr-macro.rs:27:24
   |
27 |     fn misplaced_macro(&self) {}
   |                        ^^^^^

error: default not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:31:1
   |
31 | default impl FooStruct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsafe not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:34:1
   |
34 | unsafe impl FooStruct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: const params not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:37:1
   |
37 | impl<const N: usize> FooStruct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type params not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:44:1
   |
44 | impl<A> FooStructWithParam<A> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: where clause not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:47:1
   |
47 | impl FooStructWithParam<A> where A: usize {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Only struct is supported
  --> tests/cases/case-extendr-macro.rs:52:1
   |
52 | / enum FooEnum1 {
53 | |     A,
54 | |     B,
55 | |     C,
56 | | }
   | |_^

error: Only struct is supported
  --> tests/cases/case-extendr-macro.rs:59:1
   |
59 | / enum FooEnum2 {
60 | |     A,
61 | |     B,
62 | |     C,
63 | | }
   | |_^
